--- a/app/src/main/res/layout/item_hostel.xml
+++ b/app/src/main/res/layout/item_hostel.xml
@@ -436,7 +436,7 @@
                     android:gravity="center">
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/callNowBtn"
+                        android:id="@+id/btnCallNow"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
