--- a/app/src/main/res/layout/activity_hostel_detail.xml
+++ b/app/src/main/res/layout/activity_hostel_detail.xml
@@ -199,6 +199,7 @@
                     android:text="Call Now"
                     android:paddingVertical="12dp"
                     app:cornerRadius="12dp"
+                    android:textColor="@color/white"
                     android:backgroundTint="@color/dark_blue" />
 
                 <com.google.android.material.button.MaterialButton
