--- a/app/src/main/res/layout/activity_owner_document_submission.xml
+++ b/app/src/main/res/layout/activity_owner_document_submission.xml
@@ -108,7 +108,8 @@
                         android:layout_height="wrap_content"
                         android:hint="Enter hostel name"
                         android:inputType="textCapWords"
-                        android:textColor="#1565C0"
+                        android:textColor="@color/black"
+
                         android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -136,7 +137,7 @@
                         android:layout_height="wrap_content"
                         android:hint="Enter complete address"
                         android:inputType="textPostalAddress"
-                        android:textColor="#1565C0"
+                        android:textColor="@color/black"
                         android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -154,7 +155,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:boxStrokeColor="#1976D2"
-                    app:hintTextColor="#1976D2"
+                    android:textColor="@color/black"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -165,7 +166,7 @@
                         android:hint="WiFi, Mess, Laundry, Security etc."
                         android:inputType="textMultiLine|textCapSentences"
                         android:minLines="3"
-                        android:textColor="#1565C0"
+                        android:textColor="@color/black"
                         android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
