--- a/app/src/main/res/layout/dialog_add_review.xml
+++ b/app/src/main/res/layout/dialog_add_review.xml
@@ -31,7 +31,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -39,13 +40,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:hint="Tell us about your stay..."
+        android:textColor="@color/black"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputComment"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:gravity="top"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:textColor="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -54,5 +57,6 @@
         android:layout_height="wrap_content"
         android:text="Submit Review"
         android:layout_marginTop="20dp"
+        android:textColor="@color/white"
         android:backgroundTint="@color/dark_blue"/>
 </LinearLayout>
