--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -85,7 +85,7 @@
         <ImageView
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_chevron_right"
+            android:src="@drawable/ic_profile"
             app:tint="#D1D1D1" />
 
     </LinearLayout>
